<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test11"
    android:layout_width="320dp"
    android:layout_height="240dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights,UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/file_add"
                android:src="@drawable/baseline_copy_24"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/AddText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_add"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/file_delete"
                android:src="@drawable/baseline_delete_24"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/DeleteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_delete"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/file_tools"
                android:src="@drawable/baseline_tools_24"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/ToolsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_tools"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/file_properties"
                android:src="@drawable/baseline_properties_24"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/PropertiesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_properties"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/file_open_with"
                android:src="@drawable/baseline_yes_24"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/OpenWithText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_open_with"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights,UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/file_move"
                android:src="@drawable/baseline_move_24"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/MoveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_move"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights,UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/file_rename"
                android:src="@drawable/baseline_rename_24"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/RenameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_rename"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                tools:ignore="DuplicateIds" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/file_compress"
                android:src="@drawable/baseline_compress_24"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/CompressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_compress"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/file_share"
                android:src="@drawable/baseline_share_24"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/ShareText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_share"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/file_add_to_bookmarks"
                android:src="@drawable/baseline_bookmarks_24"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/AddBookmarksText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_add_to_bookmarks"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>